quick styling tweaks

--- a/src/Styles/_GuestLanding.scss
+++ b/src/Styles/_GuestLanding.scss
@@ -18,6 +18,7 @@
             align-items: center;
             border-radius: 100em;
             border-style: none;
+            outline: none;
             font-family: 'Montserrat';
             font-weight: bolder;
             color: whitesmoke;
