--- a/src/Styles/_Loading.scss
+++ b/src/Styles/_Loading.scss
@@ -8,6 +8,7 @@
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
+    filter: invert(95%) sepia(0%) saturate(121%) hue-rotate(330deg) brightness(116%) contrast(100%);
 }
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
